--- a/STMS/Simple.TaskManagement.Client.Net/MainWindow.xaml
+++ b/STMS/Simple.TaskManagement.Client.Net/MainWindow.xaml
@@ -165,7 +165,9 @@
                                                     </StackPanel>
                                                 </StackPanel>
                                             </materialDesign:DialogHost.DialogContent>
-                                            <ListBox Style="{StaticResource MaterialDesignCardsListBox}">
+                                            <ListBox 
+                                                ScrollViewer.HorizontalScrollBarVisibility="Disabled" 
+                                                HorizontalContentAlignment="Center">
                                                 <ListBoxItem>
                                                     <Grid>
                                                         <Grid.RowDefinitions>
@@ -269,7 +271,9 @@
                                                                 <RowDefinition Height="Auto" />
                                                             </Grid.RowDefinitions>
                                                             <TextBlock Text="COMMENTS" Style="{StaticResource MaterialDesignTitleTextBlock}" />
-                                                            <ListBox x:Name="_EDITABLE_COMMENTS_LISTVIEW" Grid.Row="1" Style="{StaticResource MaterialDesignCardsListBox}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" HorizontalContentAlignment="Stretch">
+                                                            <ListBox x:Name="_EDITABLE_COMMENTS_LISTBOX" Grid.Row="1"
+                                                                     ScrollViewer.HorizontalScrollBarVisibility="Disabled" 
+                                                                     HorizontalContentAlignment="Stretch">
                                                                 <ListBoxItem Padding="8">
                                                                     <Expander Header="1.1. Great task item">
                                                                         <Grid>
@@ -307,50 +311,52 @@
                                                             </ListBox>
                                                         </Grid>
 
-                                                        <Grid Grid.Row="2">
-                                                            
-                                                            <Grid.RowDefinitions>
-                                                                <RowDefinition />
-                                                                <RowDefinition />
-                                                                <RowDefinition />
-                                                            </Grid.RowDefinitions>
-                                                            <ComboBox Grid.Row="0" Grid.ColumnSpan="2" materialDesign:HintAssist.Hint="Type" materialDesign:HintAssist.IsFloating="True" 
+                                                        <materialDesign:Card  Grid.Row="2" Margin="4 4 0 0">
+                                                            <Grid>
+                                                                <Grid.RowDefinitions>
+                                                                    <RowDefinition />
+                                                                    <RowDefinition />
+                                                                    <RowDefinition />
+                                                                </Grid.RowDefinitions>
+                                                                <ComboBox Grid.Row="0" Grid.ColumnSpan="2" materialDesign:HintAssist.Hint="Type" materialDesign:HintAssist.IsFloating="True" 
+                                                                          Padding="8"
                                                                    >
-                                                                <ComboBoxItem>Note</ComboBoxItem>
-                                                                <ComboBoxItem>Comment</ComboBoxItem>
-                                                            </ComboBox>
-                                                            <materialDesign:PackIcon  Grid.Row="1" Kind="Pen" VerticalAlignment="Bottom" Margin="8 4 4 4"/>
-                                                            <TextBox Grid.Row="1" x:Name="CommenatryOrNoteTextBox" TextWrapping="Wrap" VerticalAlignment="Stretch" MinHeight="48" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" SpellCheck.IsEnabled="True" materialDesign:HintAssist.Hint="Write note or task item" materialDesign:HintAssist.IsFloating="True" Text="The written text" 
+                                                                    <ComboBoxItem>Note</ComboBoxItem>
+                                                                    <ComboBoxItem>Comment</ComboBoxItem>
+                                                                </ComboBox>
+                                                                <materialDesign:PackIcon  Grid.Row="1" Kind="Pen" VerticalAlignment="Bottom" Margin="8 4 4 4"/>
+                                                                <TextBox Grid.Row="1" x:Name="CommenatryOrNoteTextBox" TextWrapping="Wrap" VerticalAlignment="Stretch" MinHeight="48" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" SpellCheck.IsEnabled="True" materialDesign:HintAssist.Hint="Write note or task item" materialDesign:HintAssist.IsFloating="True" Text="The written text" 
                                                                      Padding="16 0 0 0" />
-                                                            <StackPanel HorizontalAlignment="Right" Grid.Row="1"  Orientation="Horizontal" Margin="8">
-                                                                <Button Style="{StaticResource MaterialDesignToolButton}" Width="30" Padding="2 0 2 0" materialDesign:RippleAssist.IsCentered="True">
-                                                                    <materialDesign:PackIcon Kind="Send" />
-                                                                </Button>
-                                                            </StackPanel>
-                                                            <StackPanel Grid.Row="2" Grid.Column="3" HorizontalAlignment="Right" Orientation="Horizontal" Margin="8">
-                                                                <Button Style="{StaticResource MaterialDesignToolButton}" Width="30" Padding="2 0 2 0" materialDesign:RippleAssist.IsCentered="True">
-                                                                    <materialDesign:PackIcon Kind="Database" />
-                                                                </Button>
-                                                                <Button Style="{StaticResource MaterialDesignToolButton}" Width="30" Padding="2 0 2 0" materialDesign:RippleAssist.IsCentered="True">
-                                                                    <materialDesign:PackIcon Kind="Printer" />
-                                                                </Button>
-                                                                <Button Style="{StaticResource MaterialDesignToolButton}" Width="30" Padding="2 0 2 0" materialDesign:RippleAssist.IsCentered="True">
-                                                                    <materialDesign:PackIcon Kind="Email" />
-                                                                </Button>
-                                                                <Button Style="{StaticResource MaterialDesignToolButton}" Width="30" Padding="2 0 2 0" materialDesign:RippleAssist.IsCentered="True">
-                                                                    <materialDesign:PackIcon Kind="Pulse" />
-                                                                </Button>
-                                                                <Button Style="{StaticResource MaterialDesignToolButton}" Width="30" Padding="2 0 2 0" materialDesign:RippleAssist.IsCentered="True">
-                                                                    <materialDesign:PackIcon Kind="ShareVariant" />
-                                                                </Button>
-                                                                <materialDesign:PopupBox Style="{StaticResource MaterialDesignToolPopupBox}" Padding="2 0 2 0">
-                                                                    <StackPanel>
-                                                                        <Button Content="More" />
-                                                                        <Button Content="Options" />
-                                                                    </StackPanel>
-                                                                </materialDesign:PopupBox>
-                                                            </StackPanel>
-                                                        </Grid>
+                                                                <StackPanel HorizontalAlignment="Right" Grid.Row="1"  Orientation="Horizontal" Margin="8">
+                                                                    <Button Style="{StaticResource MaterialDesignToolButton}" Width="30" Padding="2 0 2 0" materialDesign:RippleAssist.IsCentered="True">
+                                                                        <materialDesign:PackIcon Kind="Send" />
+                                                                    </Button>
+                                                                </StackPanel>
+                                                                <StackPanel Grid.Row="2" Grid.Column="3" HorizontalAlignment="Right" Orientation="Horizontal" Margin="8">
+                                                                    <Button Style="{StaticResource MaterialDesignToolButton}" Width="30" Padding="2 0 2 0" materialDesign:RippleAssist.IsCentered="True">
+                                                                        <materialDesign:PackIcon Kind="Database" />
+                                                                    </Button>
+                                                                    <Button Style="{StaticResource MaterialDesignToolButton}" Width="30" Padding="2 0 2 0" materialDesign:RippleAssist.IsCentered="True">
+                                                                        <materialDesign:PackIcon Kind="Printer" />
+                                                                    </Button>
+                                                                    <Button Style="{StaticResource MaterialDesignToolButton}" Width="30" Padding="2 0 2 0" materialDesign:RippleAssist.IsCentered="True">
+                                                                        <materialDesign:PackIcon Kind="Email" />
+                                                                    </Button>
+                                                                    <Button Style="{StaticResource MaterialDesignToolButton}" Width="30" Padding="2 0 2 0" materialDesign:RippleAssist.IsCentered="True">
+                                                                        <materialDesign:PackIcon Kind="Pulse" />
+                                                                    </Button>
+                                                                    <Button Style="{StaticResource MaterialDesignToolButton}" Width="30" Padding="2 0 2 0" materialDesign:RippleAssist.IsCentered="True">
+                                                                        <materialDesign:PackIcon Kind="ShareVariant" />
+                                                                    </Button>
+                                                                    <materialDesign:PopupBox Style="{StaticResource MaterialDesignToolPopupBox}" Padding="2 0 2 0">
+                                                                        <StackPanel>
+                                                                            <Button Content="More" />
+                                                                            <Button Content="Options" />
+                                                                        </StackPanel>
+                                                                    </materialDesign:PopupBox>
+                                                                </StackPanel>
+                                                            </Grid>
+                                                        </materialDesign:Card>
                                                     </Grid>
                                                 </ListBoxItem>
                                             </ListBox>
