--- a/STMS/Simple.TaskManagement.Launcher.Net/MainWindow.xaml
+++ b/STMS/Simple.TaskManagement.Launcher.Net/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Simple.TaskManagement.Launcher"
         mc:Ignorable="d"
+        Icon="launcher.ico"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
         
