--- a/STMS/Simple.TaskManagement.Client.Net/MainWindow.xaml
+++ b/STMS/Simple.TaskManagement.Client.Net/MainWindow.xaml
@@ -157,7 +157,7 @@
                                                 </DataGridTemplateColumn.CellTemplate>
                                                 <DataGridTemplateColumn.CellEditingTemplate>
                                                     <DataTemplate>
-                                                        <DatePicker SelectedDate="{Binding RequiredByDate, Converter={convert:NullableDateTimeToStringConverter}, StringFormat={}{0:yyyy-MM-dd}}" />
+                                                        <DatePicker SelectedDate="{Binding RequiredByDate, Converter={convert:NullableDateTimeToStringConverter}, StringFormat={}{0:dd/MM/yyyy}}" />
                                                     </DataTemplate>
                                                 </DataGridTemplateColumn.CellEditingTemplate>
                                             </DataGridTemplateColumn>
@@ -173,7 +173,7 @@
 
                                             <!-- How to deal with datetime offset collumn -->
                                             
-                                            <materialDesign:MaterialDataGridTextColumn Binding="{Binding NextActionDate, Converter={convert:NullableDateTimeToStringConverter}, StringFormat={}{0:yyyy-MM-dd}}"
+                                            <materialDesign:MaterialDataGridTextColumn Binding="{Binding NextActionDate, Converter={convert:NullableDateTimeToStringConverter}, StringFormat={}{0:dd/MM/yyy}}"
                                                                Header="Next action date"   
                                                                IsReadOnly="True"
                                                                EditingElementStyle="{StaticResource MaterialDesignDataGridTextColumnPopupEditingStyle}"  
@@ -279,7 +279,7 @@
                                                                                         <RowDefinition/>
                                                                                     </Grid.RowDefinitions>
                                                                                     <TextBox Grid.Row="0" Text="{Binding Number}" materialDesign:HintAssist.Hint="Number" materialDesign:HintAssist.IsFloating="True" HorizontalAlignment="Stretch" Margin="16 8 8 8" />
-                                                                                    <DatePicker Grid.Row="1" SelectedDate="{Binding ReminderDate, Converter={convert:NullableDateTimeToStringConverter}}" HorizontalAlignment="Stretch" Margin="16 8 8 8" materialDesign:HintAssist.Hint="Reminder" materialDesign:HintAssist.IsFloating="True"/>
+                                                                                    <DatePicker  Grid.Row="1" SelectedDate="{Binding ReminderDate, Converter={convert:NullableDateTimeToStringConverter},  StringFormat={}{0:dd/MM/yyyy}}" HorizontalAlignment="Stretch" Margin="16 8 8 8" materialDesign:HintAssist.Hint="Reminder" materialDesign:HintAssist.IsFloating="True"/>
                                                                                     <StackPanel Grid.Column="2" HorizontalAlignment="Right" Grid.Row="2" Orientation="Horizontal" Margin="8">
                                                                                         <Button Style="{StaticResource MaterialDesignToolButton}" Width="30" Padding="2 0 2 0"
                                                                                             materialDesign:RippleAssist.IsCentered="True">
