--- a/STMS/Simple.TaskManagement.Client.Net/MainWindow.xaml
+++ b/STMS/Simple.TaskManagement.Client.Net/MainWindow.xaml
@@ -386,7 +386,7 @@
                                         </Grid.RowDefinitions>
                                         <materialDesign:PackIcon Grid.Column="0" Kind="Pen" VerticalAlignment="Center" Margin="8 4 4 4"/>
                                         <ListBox Grid.Column="1" Style="{StaticResource MaterialDesignToolToggleFlatListBox}" SelectedIndex="0" Margin="4 8 8 4" 
-                                                 ItemsSource="{Binding TaskTypes}">
+                                                 ItemsSource="{Binding NewTaskTypes}">
                                             <ListBox.Resources>
                                                 <Style TargetType="{x:Type ListBoxItem}" BasedOn="{StaticResource MaterialDesignToolToggleListBoxItem}">
                                                     <Setter Property="Padding" Value="4 6 4 6" />
