--- a/STMS/Simple.TaskManagement.Client.Net/MainWindow.xaml
+++ b/STMS/Simple.TaskManagement.Client.Net/MainWindow.xaml
@@ -32,7 +32,8 @@
         <local:Locator />
     </Window.DataContext>
     <materialDesign:DialogHost x:Name="_ROOT_DIALOG_HOST" Identifier="RootDialog" SnackbarMessageQueue="{Binding ElementName=MainSnackbar, Path=MessageQueue}">
-        <materialDesign:DrawerHost x:Name="_ROOT_DRAWERHOST" IsLeftDrawerOpen="{Binding ElementName=MenuToggleButton, Path=IsChecked}">
+        <materialDesign:DrawerHost x:Name="_ROOT_DRAWERHOST" IsLeftDrawerOpen="{Binding ElementName=MenuToggleButton, Path=IsChecked}"
+                                   IsBottomDrawerOpen="{Binding TextSearch.IsSearching.Value}">
             <materialDesign:DrawerHost.LeftDrawerContent>
                 <DockPanel MinWidth="212" x:Name="_ROOT_DRAWERHOST_LEFT_PANEL">
                     <ToggleButton Style="{StaticResource MaterialDesignHamburgerToggleButton}" DockPanel.Dock="Top" HorizontalAlignment="Right" Margin="16" IsChecked="{Binding ElementName=MenuToggleButton, Path=IsChecked, Mode=TwoWay}" />
@@ -55,16 +56,40 @@
                 </DockPanel>
             </materialDesign:DrawerHost.LeftDrawerContent>
             <materialDesign:DrawerHost.BottomDrawerContent>
-                <StackPanel MinHeight="212" x:Name="_ROOT_DRAWERHOST_BOTTOM_PANEL">
+                <Grid MinHeight="212" x:Name="_ROOT_DRAWERHOST_BOTTOM_PANEL" Margin="8">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
                     <TextBlock Text="SEARCH RESULTS" />
-                    <ListView x:Name="_TASK_SERACH_RESULT_LIST" ScrollViewer.HorizontalScrollBarVisibility="Disabled" HorizontalContentAlignment="Stretch" SelectedValue="{Binding SearchResult.SelectedItem.Value}" ItemsSource="{Binding SearchResult.TaskList.Value}">
-                        <ListView.ItemTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{Binding}" />
-                            </DataTemplate>
-                        </ListView.ItemTemplate>
+                    
+
+                    <Button Grid.Column="1" Command="{Binding TextSearch.Cancel}" 
+                        Style="{DynamicResource MaterialDesignFlatButton}"
+                        Margin="4" VerticalAlignment="Center">
+                        CLOSE
+                    </Button>
+
+                    <ListView Grid.Row="1" Grid.ColumnSpan="2" x:Name="_TASK_SERACH_RESULT_LIST" ScrollViewer.HorizontalScrollBarVisibility="Disabled" HorizontalContentAlignment="Stretch" 
+                              SelectedValue="{Binding SearchResult.SelectedItem.Value}" ItemsSource="{Binding SearchResult.TaskList.Value}">
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn DisplayMemberBinding="{Binding TaskId}" Header="Task Id" />
+                                <GridViewColumn DisplayMemberBinding="{Binding TaskType}" Header="TaskType" />
+                                <GridViewColumn DisplayMemberBinding="{Binding TaskStatus}" Header="Status" />
+                                <GridViewColumn DisplayMemberBinding="{Binding AssignedTo[0].Id}" Header="Assigned To" />
+                                <GridViewColumn DisplayMemberBinding="{Binding TaskDescription}" Header="Description" />
+                                <GridViewColumn DisplayMemberBinding="{Binding CreatedDate}" Header="Created" />
+                                <GridViewColumn DisplayMemberBinding="{Binding RequiredByDate}" Header="Required By" />
+                                <GridViewColumn DisplayMemberBinding="{Binding NextActionDate}" Header="NextActionDate" />
+                            </GridView>
+                        </ListView.View>
                     </ListView>
-                </StackPanel>
+                </Grid>
             </materialDesign:DrawerHost.BottomDrawerContent>
             <DockPanel x:Name="_ROOT_DRAWERHOST_CONTENT_PANEL">
                 <materialDesign:ColorZone x:Name="HeaderColorZone" Mode="PrimaryMid" Padding="16" DockPanel.Dock="Top">
@@ -211,7 +236,7 @@
                                             <Grid>
                                                 <ListView VerticalContentAlignment="Stretch" ScrollViewer.VerticalScrollBarVisibility="Disabled"
                                                      MinWidth="300"
-                                                     ItemsSource="{Binding TaskManager.Editor.Value}"
+                                                     ItemsSource="{Binding TaskManager.OpenTaskList}"
                                                       >
 
                                                     <ListView.ItemsPanel>
@@ -232,7 +257,7 @@
                                                                     <Expander>
                                                                         <Expander.Header>
                                                                             <TextBox Text="{Binding TaskDescription}" 
-                                                                         materialDesign:HintAssist.Hint="Task Description"
+                                                                         materialDesign:HintAssist.Hint="{Binding TaskType}"
                                                                          materialDesign:HintAssist.IsFloating="True"
                                                                          HorizontalAlignment="Stretch"
                                                                          MaxLength="50"
@@ -284,7 +309,7 @@
                                                                                     <TextBox Grid.Row="0" Text="{Binding Number}" materialDesign:HintAssist.Hint="Number" materialDesign:HintAssist.IsFloating="True" HorizontalAlignment="Stretch" Margin="16 8 8 8" />
                                                                                     <DatePicker  Grid.Row="1" SelectedDate="{Binding ReminderDate, Converter={convert:NullableDateTimeToStringConverter},  StringFormat={}{0:dd/MM/yyyy}}" HorizontalAlignment="Stretch" Margin="16 8 8 8" materialDesign:HintAssist.Hint="Reminder" materialDesign:HintAssist.IsFloating="True"/>
                                                                                     <StackPanel Grid.Column="2" HorizontalAlignment="Right" Grid.Row="2" Orientation="Horizontal" Margin="8">
-                                                                                        <Button Style="{StaticResource MaterialDesignToolButton}" Width="30" Padding="2 0 2 0"
+                                                                                        <Button Style="{DynamicResource MaterialDesignToolButton}" Width="30" Padding="2 0 2 0"
                                                                                             materialDesign:RippleAssist.IsCentered="True">
                                                                                             <materialDesign:PackIcon Kind="Delete" />
                                                                                         </Button>
@@ -386,7 +411,8 @@
                                         </Grid.RowDefinitions>
                                         <materialDesign:PackIcon Grid.Column="0" Kind="Pen" VerticalAlignment="Center" Margin="8 4 4 4"/>
                                         <ListBox Grid.Column="1" Style="{StaticResource MaterialDesignToolToggleFlatListBox}" SelectedIndex="0" Margin="4 8 8 4" 
-                                                 ItemsSource="{Binding NewTaskTypes}">
+                                                 ItemsSource="{Binding NewTaskTypes}"
+                                                 SelectedItem="{Binding TaskManager.InputNextTaskItem.Value.InputTaskType.Value}">
                                             <ListBox.Resources>
                                                 <Style TargetType="{x:Type ListBoxItem}" BasedOn="{StaticResource MaterialDesignToolToggleListBoxItem}">
                                                     <Setter Property="Padding" Value="4 6 4 6" />
@@ -399,12 +425,14 @@
                                                  x:Name="NextTaskNameTextBox" 
                                                  MinHeight="48" 
                                                  SpellCheck.IsEnabled="True" 
-                                                 materialDesign:HintAssist.Hint="Start your next idea here" 
+                                                 materialDesign:HintAssist.Hint="Start new great task here" 
                                                  materialDesign:HintAssist.IsFloating="True" 
                                                  Padding="16 0 8 0" 
-                                                 MaxLength="35"/>
+                                                 Text="{Binding TaskManager.InputNextTaskItem.Value.InputTaskDescription.Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                 />
                                         <StackPanel  Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.Column="3"  Orientation="Horizontal" Margin="8">
-                                            <Button Style="{StaticResource MaterialDesignToolButton}" Width="30" Padding="2 0 2 0" materialDesign:RippleAssist.IsCentered="True">
+                                            <Button Style="{StaticResource MaterialDesignToolButton}" Width="30" Padding="2 0 2 0" materialDesign:RippleAssist.IsCentered="True"
+                                                    Command="{Binding TaskManager.AddTodoItemCommand}">
                                                 <materialDesign:PackIcon Kind="Send" />
                                             </Button>
                                         </StackPanel>
