--- a/STMS/Simple.TaskManagement.Client.Net/MainWindow.xaml
+++ b/STMS/Simple.TaskManagement.Client.Net/MainWindow.xaml
@@ -244,7 +244,7 @@
                                                 <Grid>
                                                     <ListView VerticalContentAlignment="Stretch" ScrollViewer.VerticalScrollBarVisibility="Disabled"
                                                      MinWidth="300"
-                                                     ItemsSource="{Binding TaskManager.Editor.Value.OpenTaskList}"
+                                                     ItemsSource="{Binding TaskEditor.OpenTaskList}"
                                                       >
 
                                                         <ListView.ItemsPanel>
