--- a/STMS/Simple.TaskManagement.Client.Net/MainWindow.xaml
+++ b/STMS/Simple.TaskManagement.Client.Net/MainWindow.xaml
@@ -253,8 +253,7 @@
                                                             </ItemsPanelTemplate>
                                                         </ListView.ItemsPanel>
                                                         <ListView.ItemTemplate>
-                                                            <DataTemplate DataType="{x:Type datatypes:Task}">
-
+                                                            <DataTemplate DataType="{x:Type domain:OpenTaskItem}">
                                                                 <Grid>
                                                                     <Grid.RowDefinitions>
                                                                         <RowDefinition Height="Auto" />
@@ -264,8 +263,8 @@
                                                                     <materialDesign:Card Margin="4 4 0 0">
                                                                         <Expander>
                                                                             <Expander.Header>
-                                                                                <TextBox Text="{Binding TaskDescription}" 
-                                                                         materialDesign:HintAssist.Hint="{Binding TaskType}"
+                                                                                <TextBox Text="{Binding InputTaskDescription.Value}" 
+                                                                         materialDesign:HintAssist.Hint="{Binding InputTaskType.Value}"
                                                                          materialDesign:HintAssist.IsFloating="True"
                                                                          HorizontalAlignment="Stretch"
                                                                          MaxLength="50"
@@ -277,7 +276,7 @@
 
                                                                     <!--#region TASK COMMENTS-->
                                                                     <ListBox x:Name="_EDITABLE_COMMENTS_LISTBOX" Grid.Row="1"
-                                                                    ItemsSource="{Binding Comments}"
+                                                                    ItemsSource="{Binding InputComments}"
                                                                      HorizontalContentAlignment="Stretch"
                                                                      >
                                                                         <ListBox.Resources>
@@ -289,7 +288,8 @@
                                                                                                 <ColumnDefinition Width="Auto"/>
                                                                                                 <ColumnDefinition/>
                                                                                             </Grid.ColumnDefinitions>
-                                                                                            <ListBox Grid.Column="0" Style="{StaticResource MaterialDesignToolToggleFlatListBox}" SelectedIndex="0" Margin="4 8 8 4">
+                                                                                            <ListBox Grid.Column="0" Style="{StaticResource MaterialDesignToolToggleFlatListBox}" SelectedIndex="0" Margin="4 8 8 4"
+                                                                                                     >
                                                                                                 <ListBox.Resources>
                                                                                                     <Style TargetType="{x:Type ListBoxItem}" BasedOn="{StaticResource MaterialDesignToolToggleListBoxItem}">
                                                                                                         <Setter Property="Padding" Value="4 6 4 6" />
@@ -344,23 +344,30 @@
                                                                                 <RowDefinition />
                                                                             </Grid.RowDefinitions>
                                                                             <materialDesign:PackIcon Grid.Column="0" Kind="Pen" VerticalAlignment="Center" Margin="8 4 4 4"/>
-                                                                            <ListBox Grid.Column="1" Style="{StaticResource MaterialDesignToolToggleFlatListBox}" SelectedIndex="0" Margin="4 8 8 4">
+                                                                            <ListBox Grid.Column="1" Style="{StaticResource MaterialDesignToolToggleFlatListBox}" SelectedIndex="1" Margin="4 8 8 4"
+                                                                                     ItemsSource="{Binding CommentTypes}"
+                                                                                    SelectedItem="{Binding InputNextComment.Value.InputCommentType.Value}"
+                                                                                     >
+                                                                                <!---->
                                                                                 <ListBox.Resources>
                                                                                     <Style TargetType="{x:Type ListBoxItem}" BasedOn="{StaticResource MaterialDesignToolToggleListBoxItem}">
                                                                                         <Setter Property="Padding" Value="4 6 4 6" />
                                                                                     </Style>
                                                                                 </ListBox.Resources>
-                                                                                <ListBoxItem>
-                                                                                    <materialDesign:PackIcon  Kind="Comment" VerticalAlignment="Center" Margin="8 4 4 4"/>
-                                                                                </ListBoxItem>
-                                                                                <ListBoxItem>
-                                                                                    <materialDesign:PackIcon  Kind="Note" VerticalAlignment="Center" Margin="8 4 4 4"/>
-                                                                                </ListBoxItem>
+                                                                                <ListBox.ItemTemplate>
+                                                                                    <DataTemplate>
+                                                                                        <materialDesign:PackIcon  Kind="{Binding Converter={convert:CommentTypeToPackIconKindConverter}}" VerticalAlignment="Center" Margin="8 4 4 4"/>
+                                                                                    </DataTemplate>
+                                                                                </ListBox.ItemTemplate>
+                                                                                
+                                                                               
                                                                             </ListBox>
-                                                                            <TextBox Grid.Row="1" Grid.ColumnSpan="2" x:Name="WriteCommenatryOrNoteTextBox" TextWrapping="Wrap" VerticalAlignment="Stretch" MinHeight="48" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" SpellCheck.IsEnabled="True" materialDesign:HintAssist.Hint="Write note or task item" materialDesign:HintAssist.IsFloating="True" Text="The written text" 
+                                                                            <TextBox Grid.Row="1" Grid.ColumnSpan="2" x:Name="WriteCommenatryOrNoteTextBox" TextWrapping="Wrap" VerticalAlignment="Stretch" MinHeight="48" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" SpellCheck.IsEnabled="True" materialDesign:HintAssist.Hint="Write note or task item" materialDesign:HintAssist.IsFloating="True" 
+                                                                                     Text="{Binding InputNextComment.Value.InputCommentary.Value}"
                                                                      Padding="16 0 8 0" />
                                                                             <StackPanel  Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.Column="3"  Orientation="Horizontal" Margin="8">
-                                                                                <Button Style="{StaticResource MaterialDesignToolButton}" Width="30" Padding="2 0 2 0" materialDesign:RippleAssist.IsCentered="True">
+                                                                                <Button Style="{StaticResource MaterialDesignToolButton}" Width="30" Padding="2 0 2 0" materialDesign:RippleAssist.IsCentered="True"
+                                                                                        Command="{Binding AddCommentCommand}">
                                                                                     <materialDesign:PackIcon Kind="Send" />
                                                                                 </Button>
                                                                             </StackPanel>
